CHANGES IN VERSION 1.1.1
------------------------
    o fix bug in xgx_stat_smooth / predictdf.nls that caused an error when formula had only one parameter to fit

CHANGES IN VERSION 1.1.0
------------------------
    o xgx_stat_smooth() added to allow for nonlinear fitting + confidence intervals, including emax fitting, and ordinal response fitting
    o xgx_stat_ci() updated with binning by quantiles, and ordinal/multinomial confidence intervals
    o (BETA) xgx_auto_explore() function to automatically compile Rmd templates from xgx website!
    o xgx_save and xgx_dirs2char: Added error checking that dirs variable is list. 
    o xgx_save: Enable change in font color and size for directories caption    

CHANGES IN VERSION 1.0.9
------------------------
    o changes to xgx_check_data() because some errors are new with regards to checking for negative values or NAs in the dataset

CHANGES IN VERSION 1.0.8
------------------------
    o theoph.Rmd vignette, for data_pk, keep only rows where TIME>0.  This fixed an 
      error in the vignette that was introduced with the March 5, 2020 ggplot2 update

CHANGES IN VERSION 1.0.7
------------------------
    o adding xgx_scale_y_percentchangelog10
    o adding xgx_stat_pi and xgx_geom_pi
    o adding xgx_minor_breaks_log10

CHANGES IN VERSION 1.0.6
-------------------------
    o updating sad_pkpd vignette to show BLOQ data in red
    o minor change to xgx_check_data() text output
    o updating xgx_scale_x_reverselog() and xgx_scale_y_reverselog() to more easily control the labels and to allow user to set accuracy
    o xgx_breaks_time() - allow user to set target number of breaks xgx_scale_x_time_units()

CHANGES IN VERSION 1.0.5
-------------------------
    o fixed bug in xgx_theme_set() to make sure it calls xgx_theme() instead of theme_bw()
    o fixed bug in xgx_stat_ci() which changed default geom properties globally by mistake

CHANGES IN VERSION 1.0.4
-------------------------