@@ -2,6 +2,7 @@
 
 S3method(ggplot2::predictdf,nls)
 S3method(ggplot2::predictdf,polr)
+S3method(stats::predict,nls)
 export("%>%")
 export(StatSmoothOrdinal)
 export(StatSummaryBinQuant)
@@ -11,6 +12,7 @@ export(get_rmd_name)
 export(get_rmd_str)
 export(gtable)
 export(nlsLM)
+export(predict.nls)
 export(theme_xgx)
 export(xgx_annotate_filenames)
 export(xgx_annotate_status)
@@ -117,7 +119,6 @@ importFrom(stats,lowess)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,nls)
-importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
