@@ -328,6 +328,24 @@ gg +
 
 ```
 
+xgxr also modifies the stats method `predict.nls` for `nls` objects in order to include confidence interval prediction. Upon loading the xgxr package, the `predict` method for class `nls` should be updated to the xgxr version, and include functionality to supply confidence intervals. In order to output the confidence intervals, be sure to specify `interval = "confidence"`. The output will contain a "fit" data.frame with values for "fit", "lwr" and "upr" representing the prediction and lower and upper confidence intervals.
+
+```{r}
+mod <- nlsLM(formula = Response ~ E0 + Emax * DOSE / (ED50 + DOSE),
+             data = dat1,
+             start = list(E0 = 1, ED50 = 1, Emax = 1),
+                                    lower = c(-Inf, 0, -Inf))
+
+predict(mod,
+            newdata = data.frame(DOSE = c(0, 25, 50, 100, 200)),
+            se.fit = TRUE)
+
+predict(mod,
+            newdata = data.frame(DOSE = c(0, 25, 50, 100, 200)),
+            se.fit = TRUE, interval = "confidence", level = 0.95)
+
+```
+
 xgxr also includes ordinal response smoothing as an option under the `xgx_stat_smooth` function, indicated by `method = "polr"`. This requires a dataset of x values and response values, to be defined in the mapping. This method also allows defining of color, fill, facet, linetype, etc. by the response category, while preserving the ordinal response fit across these categories.
 
 ```{r}
